<resources>
    <string name="app_name">To Do List</string>
    <string name="title_text_tasks">Tarefas</string>
    <string name="add_button_description">Adicionar nova tarefa</string>
    <string name="crate_task_title_text">Criar Tarefa</string>
    <string name="edit_task_title_text">Criar Tarefa</string>
    <string name="input_title_text_hint">Título</string>
    <string name="input_date_text_hint">Data</string>
    <string name="input_time_text_hint">Hora</string>
    <string name="create_task_button_text">Criar Tarefa</string>
    <string name="edit_task_button_text">Editar Tarefa</string>
    <string name="cancel_task_button_text">Cancelar</string>
    <string name="edit_popup_text">Editar</string>
    <string name="delete_popup_text">Deletar</string>
    <string name="empty_state_text">Você ainda não possui nenhuma tarefa!</string>
    <string name="input_date_description_hint">Descriçao</string>
</resources>